--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     -->
 
     <title>DexBR</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon-dexbr.svg">
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
